--- a/404.md
+++ b/404.md
@@ -1,10 +1,11 @@
 ---
-layout: post
+layout: default
 title: "Pagina non trovata"
 permalink: 404.html
-hide: true
 ---
 
-Mi dispiace la pagina cercata non esiste.
+**Mi dispiace la pagina cercata non esiste!**
 
-Potete cercare fra le varie pagine oppure nell'<a href="{{ site.baseurl }}/blog/archivio">Archivio dei post</a>.
+Potrebbe trattarsi di un link che è stato cambiato, nel qual caso la pagina esiste ma ha un altro indirizzo.
+
+Potete allora cercare con il campo di ricerca sotto la mia foto, oppure potete cercare nell'<a href="{{ site.url }}{{ site.baseurl }}/blog/archivio">Archivio dei post</a> e fra i vari tag, o anche "girare" nel mio sito nelle varie sezioni.
